--- a/config/services.yml
+++ b/config/services.yml
@@ -62,6 +62,34 @@ services:
       - '@prestashop.core.grid.filter.form_factory'
       - '@prestashop.core.hook.dispatcher'
 
+  #Link
+  prestashop.module.kj_cutsommenu.grid.definition.factory.links:
+    class: 'PrestaShop\Module\CustomMenu\Grid\Definition\Factory\MenuLinkDefinitionFactory'
+    parent: 'prestashop.core.grid.definition.factory.abstract_grid_definition'
+
+  prestashop.module.kj_cutsommenu.grid.query_builder.links:
+    class: 'PrestaShop\Module\CustomMenu\Grid\Query\LinkQueryBuilder'
+    parent: 'prestashop.core.grid.abstract_query_builder'
+    public: true
+    arguments:
+      - '@prestashop.core.query.doctrine_search_criteria_applicator'
+
+  prestashop.module.kj_cutsommenu.grid.data_provider.links:
+    class: '%prestashop.core.grid.data.factory.doctrine_grid_data_factory%'
+    arguments:
+      - '@prestashop.module.kj_cutsommenu.grid.query_builder.links'
+      - '@prestashop.core.hook.dispatcher'
+      - '@prestashop.core.grid.query.doctrine_query_parser'
+      - 'custommenulink'
+
+  prestashop.module.kj_cutsommenu.grid.factory.links:
+    class: 'PrestaShop\PrestaShop\Core\Grid\GridFactory'
+    arguments:
+      - '@prestashop.module.kj_cutsommenu.grid.definition.factory.links'
+      - '@prestashop.module.kj_cutsommenu.grid.data_provider.links'
+      - '@prestashop.core.grid.filter.form_factory'
+      - '@prestashop.core.hook.dispatcher'
+
 #Repository
   prestashop.module.kj_cutsommenu.repository.menu_link_repository:
     class: PrestaShop\Module\CustomMenu\Repository\MenuLinkRepository
